Fixing issue of Aspects & adding removeRegistration method
Fixing issue of Aspects & adding removeRegistration method
